--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,10 +20,14 @@ h1, h2 {
 }
 
 /* Projects Grid */
-
 .grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+display: grid;
+grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+
+
+.sub-project-grid {
+grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 
 .grid-container > a, img {
